fixed coding issues.